<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:padding="10dp">


    <TextView
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/new_place_details"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <TableRow android:layout_height="wrap_content">
        <TextView
            android:layout_column="1"
            android:text="@string/place_name"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:textSize="14sp"
            android:padding="5dp"/>
        <EditText
            android:textSize="14sp"
            android:id="@+id/placeName"
            android:width="150dp"
            android:padding="2dp"
            android:maxLines="4"/>
    </TableRow>

    <TableRow android:layout_height="wrap_content">
        <TextView
            android:layout_column="1"
            android:text="@string/place_coordinates"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:textSize="14sp"
            android:padding="5dp"/>
        <TextView
            style="@android:style/Widget.EditText"
            android:id="@+id/placeCoord"
            android:width="150dp"
            android:textSize="12sp"
            android:padding="2dp"
            android:maxLines="4"
            android:lines="2"/>
    </TableRow>
    <TableRow android:layout_height="wrap_content">
        <TextView
            android:layout_column="1"
            android:text="@string/place_address"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:textSize="14sp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/placeAddress"
            android:width="150dp"
            android:padding="2dp"/>
    </TableRow>
    <Button
        android:id="@+id/placePickerButton"
        android:text="@string/select_place"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvS"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/place_alarm_distance"
            android:gravity="end"
            android:textSize="14sp"
            android:padding="5dp"/>
        <EditText
            android:layout_toRightOf="@+id/tvS"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textSize="14sp"
            android:inputType="number"
            android:id="@+id/number"
            />
    </RelativeLayout>
    <SeekBar
        android:layout_weight="1"
        android:id="@+id/seekbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:min="1"
        android:max="50"
        android:progress="20"
        android:thumb="@drawable/thumb"
        />


    <TableRow android:layout_weight="1">
        <Button
            android:id="@+id/btnCreatePlace"
            android:layout_column="1"
            android:text="@string/btnOk"
            android:layout_width="wrap_content"
            android:gravity="center"/>
        <Button
            android:id="@+id/btnCancelCreatePlace"
            android:text="@string/btnCancel"
            android:layout_width="wrap_content"
            android:gravity="center"/>
    </TableRow>
</TableLayout>