<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/colorPrimaryLightTrans"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageViewPicture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:adjustViewBounds="false"
        android:cropToPadding="true"
        android:maxWidth="10dp"
        android:padding="7dp"
        android:src="@drawable/indit" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewPlaceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/place_name"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textViewAlarmDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewPlaceName"
            android:gravity="bottom"
            android:text="@string/place_alarm_distance"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewAlarmDistance"
            android:gravity="bottom"
            android:text="@string/place_address"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>